--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,19 @@ uuid = "ba055050-92ef-4901-b4b5-da4e2eff136e"
 authors = ["Leandro Martinez <lmartine@unicamp.br> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CellListMap = "69e1c6dd-3888-40e6-b3c8-31ac5f578864"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
+CellListMap = "0.9.8"
+GLMakie = "0.11.5"
+LinearAlgebra = "1.11.0"
+StaticArrays = "1.9.13"
+Statistics = "1.11.1"
 julia = "1.6.7"
 
 [extras]
