--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.0.0-DEV"
 CellListMap = "69e1c6dd-3888-40e6-b3c8-31ac5f578864"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
@@ -14,6 +15,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 CellListMap = "0.9.9"
 GLMakie = "0.11.5"
 LinearAlgebra = "1.10"
+PrecompileTools = "1.2.1"
 StaticArrays = "1.9.13"
 Statistics = "1.10"
 julia = "1.10"
