--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,6 @@ jobs:
       matrix:
         version:
           - 'lts'
-          - 'pre'
         os:
           - ubuntu-latest
         build_is_production_build:
@@ -23,6 +22,7 @@ jobs:
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
+      - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
       - uses: actions/cache@v3
         env:
           cache-name: cache-artifacts
@@ -47,7 +47,6 @@ jobs:
       matrix:
         version:
           - 'lts'
-          - 'pre'
         os:
           - ubuntu-latest
         build_is_production_build:
@@ -85,6 +84,7 @@ jobs:
       - uses: julia-actions/setup-julia@v2
         with:
           version: 'lts'
+      - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
       - run: |
           julia --project=docs -e '
             import Pkg; Pkg.add("Documenter")
