--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,77 +5,77 @@ on:
 env:
   JULIA_NUM_THREADS: 2
 jobs:
-  test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - 'lts'
-        os:
-          - ubuntu-latest
-        build_is_production_build:
-          - true
-    steps:
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
-        with:
-          version: ${{ matrix.version }}
-      - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
-      - uses: actions/cache@v3
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest    
-        env:
-          BUILD_IS_PRODUCTION_BUILD: ${{ matrix.build_is_production_build }}
-        with:
-          coverage: false
-  tests-with-coverage:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - 'lts'
-        os:
-          - ubuntu-latest
-        build_is_production_build:
-          - false
-    steps:
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
-        with:
-          version: ${{ matrix.version }}
-      - uses: actions/cache@v3
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest
-        env:
-          BUILD_IS_PRODUCTION_BUILD: false
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v4
-        with: 
-          file: lcov.info
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: false  # or true if you want CI to fail when Codecov fails
+#  test:
+#    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        version:
+#          - 'lts'
+#        os:
+#          - ubuntu-latest
+#        build_is_production_build:
+#          - true
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: julia-actions/setup-julia@v2
+#        with:
+#          version: ${{ matrix.version }}
+#      - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
+#      - uses: actions/cache@v3
+#        env:
+#          cache-name: cache-artifacts
+#        with:
+#          path: ~/.julia/artifacts
+#          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-test-${{ env.cache-name }}-
+#            ${{ runner.os }}-test-
+#            ${{ runner.os }}-
+#      - uses: julia-actions/julia-buildpkg@latest
+#      - uses: julia-actions/julia-runtest@latest    
+#        env:
+#          BUILD_IS_PRODUCTION_BUILD: ${{ matrix.build_is_production_build }}
+#        with:
+#          coverage: false
+#  tests-with-coverage:
+#    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        version:
+#          - 'lts'
+#        os:
+#          - ubuntu-latest
+#        build_is_production_build:
+#          - false
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: julia-actions/setup-julia@v2
+#        with:
+#          version: ${{ matrix.version }}
+#      - uses: actions/cache@v3
+#        env:
+#          cache-name: cache-artifacts
+#        with:
+#          path: ~/.julia/artifacts
+#          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-test-${{ env.cache-name }}-
+#            ${{ runner.os }}-test-
+#            ${{ runner.os }}-
+#      - uses: julia-actions/julia-buildpkg@latest
+#      - uses: julia-actions/julia-runtest@latest
+#        env:
+#          BUILD_IS_PRODUCTION_BUILD: false
+#      - uses: julia-actions/julia-processcoverage@v1
+#      - uses: codecov/codecov-action@v4
+#        with: 
+#          file: lcov.info
+#          token: ${{ secrets.CODECOV_TOKEN }}
+#          fail_ci_if_error: false  # or true if you want CI to fail when Codecov fails
   docs:
     name: Documentation
     runs-on: ubuntu-latest
