--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -85,12 +85,12 @@ jobs:
         with:
           version: 'lts'
       - run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
-#      - run: |
-#          julia --project=docs -e '
-#            import Pkg
-#            Pkg.add("Documenter")
-#            Pkg.develop(url="https://github.com/lmiq/MyChemicalSimulation.jl")
-#            Pkg.instantiate()'
+      - run: |
+          julia --project=docs -e '
+            import Pkg
+            Pkg.add("Documenter")
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
